Add signed-dmg packaging script and document Gatekeeper flow
Add src/make/macos/package_seaview_dmg.sh: two-step jpackage (app-image
then dmg) with an explicit codesign --force --deep --sign - in between
so the nested libcsJNIlib.dylib is signed as part of the bundle. Without
this the JVM dies at startup on a fresh install (Dock icon bounces, then
the app disappears) because Gatekeeper's Open Anyway clears the .app's
quarantine bit but not the nested dylib.

Update README:
- new First launch on macOS section with the Sequoia-era Settings flow
  and an xattr quarantine-clear one-liner
- Package the .dmg section now points at the new script
- mark the dmg as ad-hoc signed (not notarized) and arm64-only